migration-result/docs/ver/16.x/server-access/guides/vscode.mdx
---
title: Visual Studio Code
description: How to use Visual Studio Code's Remote Development plugin with Teleport
h1: Remote Development With Visual Studio Code
version: '16.x'
---

This guide explains how to use Teleport and Visual Studio Code's remote SSH extension.

## Prerequisites

<Tabs>
  <Tab title="Teleport Community Edition">
    - A running Teleport cluster. For details on how to set this up, see the
      [Getting Started](/docs/ver/16.x/index) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 16.0.0-dev.

      See [Installation](/docs/ver/16.x/installation) for details.

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport v16.0.0-dev git:api/14.0.0-gd1e081e go1.22
      
    $ tsh version
    # Teleport v16.0.0-dev go1.22
    Proxy version: 16.0.0-dev
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Team">
    - A Teleport Team account. If you don't have an account, sign
      up to begin your [free trial](https://goteleport.com/signup/).

    - The Enterprise `tctl` admin tool and `tsh` client tool, version >= 14.3.6.

      You can download these tools from the [Cloud Downloads page](/docs/ver/16.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport Enterprise v14.3.6 git:api/14.0.0-gd1e081e go1.22
      
    $ tsh version
    # Teleport v14.3.6 go1.22
    Proxy version: 14.3.6
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see the Enterprise
      [Getting Started](/docs/ver/16.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >=
      16.0.0-dev.

      You can download these tools by visiting your [Teleport
      account workspace](https://teleport.sh).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport Enterprise v16.0.0-dev git:api/14.0.0-gd1e081e go1.22
      
    $ tsh version
    # Teleport v16.0.0-dev go1.22
    Proxy version: 16.0.0-dev
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    - A Teleport Enterprise Cloud account. If you don't have an account,
      sign up to begin a [free trial](https://goteleport.com/signup/)  of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 14.3.6.

      You can download these tools from the [Cloud Downloads page](/docs/ver/16.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport Enterprise v14.3.6 git:api/14.0.0-gd1e081e go1.22
      
    $ tsh version
    # Teleport v14.3.6 go1.22
    Proxy version: 14.3.6
    Proxy: teleport.example.com
    ```
  </Tab>
</Tabs>

- OpenSSH client.
- Visual Studio Code with the [Remote - SSH extension](https://code.visualstudio.com/docs/remote/ssh#_system-requirements)
  for the Remote - SSH extension.
- One or more Teleport agents running the Teleport SSH Service. If you have not yet
  done this, read the
  [Server Access Getting Started Guide](/docs/ver/16.x/server-access/getting-started) to learn how.

<Note>
  Linux and MacOS clients should rely on their operating system-provided OpenSSH
  packages. Windows 10 clients should refer to Microsoft's [OpenSSH guide][win10];
  older clients can use `ssh.exe` from either [Git for Windows][git] or
  Microsoft's [Win32-OpenSSH project][win32-openssh].
</Note>

- Update the variables below with your environment's information to use our example commands directly.

## Step 1/3. First-time setup

Configure your local SSH client to access Teleport Nodes. Replace TELEPORT.EXAMPLE.COM with the address of your Teleport Proxy Service (e.g., `mytenant.teleport.sh` for Teleport Cloud users), and replace ALICE with your Teleport user.

```code
# log in to your proxy:
$ tsh login --proxy teleport.example.com --user alice

# generate the OpenSSH config for the proxy:
$ tsh config --proxy teleport.example.com
```

Append the resulting configuration snippet into your SSH config file located
in the path below:

<Tabs>
  <Tab title="Linux/MacOS">
    `$HOME/.ssh/config`
  </Tab>

  <Tab title="Windows">
    `%UserProfile%\.ssh\config`

    <Warning>
      If using PowerShell on Windows to write your SSH config, note that normal
      shell redirection may write the file with the incorrect encoding. To
      ensure it's written properly, try the following:

      ```code
      $ tsh.exe config | out-file .ssh\config -encoding utf8 -append
      ```
    </Warning>
  </Tab>
</Tabs>

You should be able to connect to the desired node using following command, replacing `user` with the username you would like to assume on the node.

```code
$ ssh user@example-node.teleport.example.com
```

<Accordion title="Teleport Cloud">
  The SSH config you generated earlier instructs your SSH client to run `tsh proxy ssh` to access a Node in your Teleport cluster. However, running an `ssh` command against the Teleport Proxy Service at `yourtenant.teleport.sh` will result in an error.
</Accordion>

<Note>
  Teleport's certificates expire fairly quickly, after which SSH
  attempts will fail with an error like the following:

  ```txt
  alice@proxy.foo.example.com: Permission denied (publickey).
  ERROR: exit status 255

  kex_exchange_identification: Connection closed by remote host
  ```

  When you see this error, re-run `tsh login` to refresh your local certificate.
</Note>

## Step 2/3. Configure Visual Studio Code

Install the [Remote - SSH extension][remote-ssh] in your local VS Code instance.
A new "Window Indicator" (icon with two arrows) should appear in the bottom left of your VS Code window.

<img src="/assets/window-indicator-e1adfa6406.png" alt="Window Indicator in bottom left corner of VS Code" width="281" height="188" />

Prior to connecting with a host, set the `Remote.SSH: Use Local Server` setting
to false in the extension setting. You can search for
`@ext:ms-vscode-remote.remote-ssh ` to find the plugin-specific settings.

<img src="/assets/settings-b88b99dd25.png" alt="Remote SSH Extension VS Code Settings" width="2402" height="574" />

To connect, click on the icon with two arrows and select "Connect to Host...".
Select "+ Add New SSH Host..."

For each host you wish to remotely develop on, add an entry like the following:

```txt
alice@node000.foo.example.com
```

<img src="/assets/add-host-780969773a.png" alt="Input box to add new Node" width="939" height="154" />

When prompted to choose which SSH Configuration file to update select the one we generated during Step 1.

This will write a new node into your SSH Configuration file. You can edit and manage all your nodes in this file.

## Step 3/3. Start a Remote Development session

Start a Remote Development session by either:

1. Clicking "Connect" on the notification that opens after adding a new host.

<img src="/assets/host-added-notification-c752d8f363.png" alt="Notification of &#x22;Host added&#x22; that has connect button" width="714" height="182" />

2. Clicking on the Window Indicator again and selecting "Connect to Host".
   You should see the host you just added and any others in your Configuration file in the drop down.

<img src="/assets/select-host-to-connect-a25552fba5.png" alt="Connecting to a Teleport host in VS Code" width="916" height="261" />

On first connect, you'll be prompted to configure the remote OS. Select the
proper platform and VS Code will install its server-side component. When it
completes, you should be left with a working editor:

<img src="/assets/connected-editor-254c7ba9e7.png" alt="VS Code connected to a Teleport Node" width="829" height="527" />

The Window Indicator in the bottom left highlights the currently connected remote host.

## Next Steps

### Connecting to OpenSSH Hosts

It's possible to remotely develop on any OpenSSH host joined to a Teleport
cluster so long as its host OS is supported by VS Code. Refer to the
[OpenSSH guide](/docs/ver/16.x/server-access/openssh) to configure the remote host to authenticate via
Teleport certificates, after which the procedure outlined above can be used to
connect to the host in VS Code.

### Using OpenSSH clients

This guide makes use of `tsh config`; refer to the
[dedicated guide](/docs/ver/16.x/server-access/openssh) for additional information.

## Further reading

- [VS Code Remote Development](https://code.visualstudio.com/docs/remote/remote-overview)

[remote-ssh]: https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.remote-ssh

[win10]: https://docs.microsoft.com/en-us/windows-server/administration/openssh/openssh_install_firstuse

[git]: https://git-scm.com/downloads

[remote-ssh-docs]: https://code.visualstudio.com/docs/remote/ssh

[win32-openssh]: https://github.com/powershell/Win32-OpenSSH
